--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center hero-unit"> 
-	<h1>Welcome to the Sample App</h1>
+	<h1>Sample App</h1>
 	
 	<h2>
 		This is the home page for the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>sample application.
